# veritas-protocol

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DESIGN_CRITIQUE.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PROTOCOL_REVIEW.md  README.md  RUST_2024_MIGRATION_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT.md  TASKS.md  VERITAS_TODO_V2.md  VERSION_HISTORY.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ghcr-publish.yml  rust.yml
crates/veritas-chain/: Cargo.toml
crates/veritas-chain/src/: block.rs  chain.rs  compression.rs  config.rs  consensus.rs  epoch.rs  error.rs  lazy_loader.rs  lib.rs  light_validator.rs  managed_chain.rs  memory.rs  merkle.rs  pruner.rs  slashing.rs  sled_backend.rs  storage.rs  sync.rs  transaction.rs  validator.rs  validator_trust.rs  vrf.rs
crates/veritas-core/: Cargo.toml
crates/veritas-core/src/: client.rs  config.rs  error.rs  groups.rs  lib.rs  messaging.rs  safety.rs  time.rs  verification.rs
crates/veritas-core/src/internal/: chain_service.rs  identity_manager.rs  message_service.rs  mod.rs  reputation_service.rs
crates/veritas-core/tests/: integration_tests.rs  phase10_integration.rs
crates/veritas-crypto/: Cargo.toml
crates/veritas-crypto/src/: deniable_auth.rs  double_ratchet.rs  error.rs  hash.rs  lib.rs  mldsa.rs  mlkem.rs  proptests.rs  symmetric.rs  x25519.rs  x3dh.rs
crates/veritas-ffi/: Cargo.toml  build.rs
crates/veritas-ffi/src/: client.rs  error.rs  identity.rs  lib.rs  safety.rs  types.rs
crates/veritas-identity/: Cargo.toml
crates/veritas-identity/src/: device_binding.rs  error.rs  hardware.rs  identity_hash.rs  keypair.rs  lib.rs  lifecycle.rs  limits.rs  proptests.rs  revocation.rs  rotation_notification.rs  username.rs
crates/veritas-net/: Cargo.toml
crates/veritas-net/src/: bluetooth.rs  cover_traffic.rs  dht.rs  discovery.rs  error.rs  gossip.rs  lib.rs  node.rs  rate_limiter.rs  relay.rs  subnet_limiter.rs  transport.rs  transport_manager.rs
crates/veritas-node/: Cargo.toml
crates/veritas-node/src/: main.rs
crates/veritas-protocol/: Cargo.toml
crates/veritas-protocol/src/: domain_separation.rs  error.rs  image_transfer.rs  lib.rs  limits.rs  proptests.rs  session.rs  transcript.rs  wire_error.rs
crates/veritas-protocol/src/chunking/: chunk.rs  mod.rs  reassembly.rs
crates/veritas-protocol/src/encryption/: e2e.rs  mod.rs
crates/veritas-protocol/src/envelope/: inner.rs  mailbox.rs  minimal.rs  mod.rs  padding.rs
crates/veritas-protocol/src/groups/: keys.rs  metadata.rs  mod.rs  rotation.rs  sender_auth.rs
crates/veritas-protocol/src/receipts/: delivery.rs  mod.rs
crates/veritas-protocol/src/signing/: message_sig.rs  mod.rs
crates/veritas-py/: Cargo.toml  veritas.pyi
crates/veritas-py/src/: client.rs  error.rs  identity.rs  lib.rs  safety.rs
crates/veritas-reputation/: Cargo.toml
crates/veritas-reputation/src/: collusion.rs  decay.rs  effects.rs  error.rs  lib.rs  manager.rs  proof.rs  rate_limiter.rs  report.rs  score.rs
crates/veritas-store/: Cargo.toml
crates/veritas-store/src/: encrypted_db.rs  error.rs  keyring.rs  lib.rs  message_queue.rs  session_store.rs
crates/veritas-wasm/: Cargo.toml
crates/veritas-wasm/src/: client.rs  error.rs  identity.rs  lib.rs  safety.rs
docker/: prometheus.yml
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/dashboards/json/: veritas-overview.json
docker/grafana/provisioning/datasources/: datasources.yml
docs/: API.md  ARCHITECTURE.md  README.md  SECURITY.md  SETUP.md
docs/getting-started/: CONFIGURATION.md  INSTALLATION.md  QUICKSTART.md
docs/guides/: API_EXAMPLES.md  CLI_REFERENCE.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md
docs/reference/: API.md  ARCHITECTURE.md  GLOSSARY.md  SECURITY.md  VERITAS-2026-0090-REMEDIATION.md
documentation/: API_EXAMPLES.md  CLI_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GLOSSARY.md  INSTALLATION.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
examples/cli-chat/: Cargo.toml  README.md
examples/cli-chat/src/: main.rs
examples/web-demo/: README.md  app.js  build.sh  index.html  style.css
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_encrypted_data_parse.rs  fuzz_hash_from_bytes.rs  fuzz_identity_hash_from_hex.rs  fuzz_message_chunking.rs  fuzz_padding.rs  fuzz_symmetric_decrypt.rs  fuzz_username_validation.rs  fuzz_x25519_public_key.rs
