[workspace]
resolver = "2"
members = [
    "crates/veritas-crypto",
    "crates/veritas-identity",
    "crates/veritas-protocol",
    "crates/veritas-chain",
    "crates/veritas-net",
    "crates/veritas-store",
    "crates/veritas-reputation",
    "crates/veritas-core",
    "crates/veritas-ffi",
    "crates/veritas-wasm",
    "crates/veritas-py",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veritas-protocol/veritas"
authors = ["VERITAS Protocol Contributors"]

[workspace.dependencies]
# Internal crates
veritas-crypto = { path = "crates/veritas-crypto" }
veritas-identity = { path = "crates/veritas-identity" }
veritas-protocol = { path = "crates/veritas-protocol" }
veritas-chain = { path = "crates/veritas-chain" }
veritas-net = { path = "crates/veritas-net" }
veritas-store = { path = "crates/veritas-store" }
veritas-reputation = { path = "crates/veritas-reputation" }
veritas-core = { path = "crates/veritas-core" }

# Cryptography - Post-Quantum (NIST FIPS 203/204)
ml-kem = "0.2"
ml-dsa = "0.1.0-rc.4"

# Cryptography - Classical (hybrid fallback)
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1"
argon2 = "0.5"

# Cryptography - Utilities
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
libp2p = { version = "0.53", features = [
    "tokio",
    "noise",
    "tcp",
    "yamux",
    "gossipsub",
    "kad",
    "mdns",
    "identify",
] }

# Storage
sled = "0.34"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# FFI
cbindgen = "0.26"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }

# Python
pyo3 = { version = "0.20", features = ["extension-module"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster builds in development
opt-level = 0
debug = true
