[workspace]
resolver = "2"
members = [
    "crates/veritas-crypto",
    "crates/veritas-identity",
    "crates/veritas-protocol",
    "crates/veritas-chain",
    "crates/veritas-net",
    "crates/veritas-store",
    "crates/veritas-reputation",
    "crates/veritas-core",
    "crates/veritas-ffi",
    "crates/veritas-wasm",
    "crates/veritas-py",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veritas-protocol/veritas"
keywords = ["cryptography", "messaging", "post-quantum", "blockchain", "p2p"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
# Cryptography - Post-Quantum (pre-release versions)
# Note: These crates are rapidly evolving. We'll integrate them once stable.
# ml-kem = "0.3.0-pre.5"
# ml-dsa = "0.1.0-rc.4"

# Cryptography - Classical
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1"
argon2 = "0.5"

# Cryptography - Utilities
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
libp2p = { version = "0.53", features = ["tokio", "noise", "tcp", "dns", "websocket", "kad", "gossipsub", "mdns", "identify"] }

# Storage
sled = "0.34"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1"

# FFI
libc = "0.2"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }

# Python
pyo3 = { version = "0.20", features = ["extension-module"] }

# Internal crates
veritas-crypto = { path = "crates/veritas-crypto" }
veritas-identity = { path = "crates/veritas-identity" }
veritas-protocol = { path = "crates/veritas-protocol" }
veritas-chain = { path = "crates/veritas-chain" }
veritas-net = { path = "crates/veritas-net" }
veritas-store = { path = "crates/veritas-store" }
veritas-reputation = { path = "crates/veritas-reputation" }
veritas-core = { path = "crates/veritas-core" }
