[package]
name = "veritas-chain"
description = "Blockchain layer for the VERITAS Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veritas-crypto.workspace = true
veritas-protocol.workspace = true

serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
