[package]
name = "veritas-chain"
description = "Blockchain layer for VERITAS message verification"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "merkle-tree", "consensus", "verification"]
categories = ["cryptography", "data-structures"]

[features]
default = ["sled-storage"]
sled-storage = ["dep:sled"]

[dependencies]
veritas-crypto.workspace = true
veritas-identity.workspace = true
veritas-protocol.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Security
rand.workspace = true
rand_chacha.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

# Optimization - Memory management
lru = "0.12"

# Optimization - Compression
zstd = "0.13"

# Async traits
async-trait = "0.1"

# Async runtime (for storage operations)
tokio.workspace = true

# Persistent storage (optional, enabled by default)
sled = { workspace = true, optional = true }

# Hashing for integrity checks
blake3.workspace = true

# Hex encoding
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
