[package]
name = "veritas-core"
description = "High-level API for the VERITAS Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veritas-crypto.workspace = true
veritas-identity.workspace = true
veritas-protocol.workspace = true
veritas-chain.workspace = true
veritas-net.workspace = true
veritas-store.workspace = true
veritas-reputation.workspace = true

tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
