[package]
name = "veritas-core"
description = "High-level API for VERITAS protocol"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["messaging", "cryptography", "api"]
categories = ["cryptography", "network-programming"]

[dependencies]
veritas-crypto.workspace = true
veritas-identity.workspace = true
veritas-protocol.workspace = true
veritas-chain.workspace = true
veritas-net.workspace = true
veritas-store.workspace = true
veritas-reputation.workspace = true

# Async
tokio.workspace = true

# Time
chrono.workspace = true

# Security
zeroize.workspace = true

# Storage
sled.workspace = true

# Serialization
bincode.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Platform directories
dirs = "5"

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
futures = "0.3"
