[package]
name = "veritas-crypto"
description = "Cryptographic primitives for VERITAS protocol - post-quantum secure"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["cryptography", "post-quantum", "ml-kem", "ml-dsa", "blake3"]
categories = ["cryptography"]

[dependencies]
# Post-quantum cryptography
# ml-kem.workspace = true  # TODO: integrate once stable
ml-dsa.workspace = true
hybrid-array.workspace = true

# Classical cryptography
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
blake3.workspace = true
argon2.workspace = true

# Security utilities
rand.workspace = true
getrandom.workspace = true
zeroize.workspace = true
subtle.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
std = []
