[package]
name = "veritas-identity"
description = "Identity and DID system for the VERITAS Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veritas-crypto.workspace = true

serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
chrono.workspace = true
rand.workspace = true
blake3.workspace = true

[dev-dependencies]
proptest.workspace = true
