[package]
name = "veritas-identity"
description = "Decentralized identity system for VERITAS protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["identity", "did", "cryptography", "decentralized"]
categories = ["cryptography", "authentication"]

[dependencies]
veritas-crypto.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Security
zeroize.workspace = true
rand.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
