[package]
name = "veritas-net"
description = "P2P networking layer for VERITAS protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["networking", "p2p", "libp2p", "bluetooth", "mesh"]
categories = ["network-programming"]

[dependencies]
veritas-crypto.workspace = true
veritas-protocol.workspace = true
veritas-reputation.workspace = true

# Networking
libp2p.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
