[package]
name = "veritas-net"
description = "P2P networking layer for VERITAS protocol"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["networking", "p2p", "libp2p", "bluetooth", "mesh"]
categories = ["network-programming"]

[dependencies]
veritas-crypto.workspace = true
veritas-protocol.workspace = true
veritas-reputation.workspace = true

# Networking
libp2p = { workspace = true, features = ["macros", "yamux"] }

# Async
tokio.workspace = true
futures.workspace = true

# Cryptography
blake3.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Utilities
hex.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
