[package]
name = "veritas-node"
description = "VERITAS protocol node daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["daemon", "node", "server"]
categories = ["network-programming"]

[[bin]]
name = "veritas-node"
path = "src/main.rs"

[dependencies]
# NODE-FIX-3: Removed unused direct dependencies (veritas-crypto, veritas-identity,
# veritas-protocol, veritas-store, veritas-reputation). These are transitive
# dependencies through veritas-core and are not directly used by the node binary.
veritas-core.workspace = true
veritas-net.workspace = true

# Async
tokio = { workspace = true, features = ["full", "signal"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
