[package]
name = "veritas-protocol"
description = "Wire protocol and message formats for VERITAS"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["protocol", "messaging", "encryption"]
categories = ["network-programming", "cryptography"]

[dependencies]
veritas-crypto.workspace = true
veritas-identity.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Hashing
blake3.workspace = true

# Security
zeroize.workspace = true
rand.workspace = true
subtle.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
