[package]
name = "veritas-reputation"
description = "Reputation scoring system for the VERITAS Protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
