[package]
name = "veritas-reputation"
description = "Reputation scoring system for VERITAS protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["reputation", "scoring", "anti-spam", "trust"]
categories = ["algorithms"]

[dependencies]
# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

# Randomness
rand.workspace = true
getrandom.workspace = true

[dev-dependencies]
proptest.workspace = true
