[package]
name = "veritas-reputation"
description = "Reputation scoring system for VERITAS protocol"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["reputation", "scoring", "anti-spam", "trust"]
categories = ["algorithms"]

[dependencies]
# Serialization
serde.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true

# Time
chrono.workspace = true

# Randomness
rand.workspace = true
getrandom.workspace = true

# Cryptographic operations (VERITAS-2026-0010)
veritas-crypto = { path = "../veritas-crypto" }

# Hex encoding for error messages
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
