[package]
name = "veritas-store"
description = "Encrypted local storage for VERITAS protocol"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["storage", "encrypted", "database", "sled"]
categories = ["database", "cryptography"]

[dependencies]
veritas-crypto.workspace = true
veritas-protocol.workspace = true
veritas-identity.workspace = true

# Storage
sled.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Security
zeroize.workspace = true
argon2.workspace = true
subtle.workspace = true

# Time
chrono.workspace = true

# Random
rand.workspace = true

# Hashing
blake3.workspace = true
hex.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
