[package]
name = "veritas-wasm"
description = "WebAssembly bindings for VERITAS protocol"
version.workspace = true
edition = "2024"
rust-version = "1.85"
license.workspace = true
repository.workspace = true
keywords = ["wasm", "webassembly", "browser"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
veritas-crypto = { workspace = true }
veritas-identity = { workspace = true }
veritas-protocol = { workspace = true }

# WASM
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
getrandom = { workspace = true, features = ["js"] }
serde-wasm-bindgen = "0.6"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Cryptography
argon2.workspace = true

# Error handling
thiserror.workspace = true

# Optional debugging
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
