[package]
name = "veritas-cli-chat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI chat example for VERITAS Protocol"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "veritas-chat"
path = "src/main.rs"

[dependencies]
# VERITAS core library
veritas-core.workspace = true
veritas-identity.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization for contacts storage
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Terminal colors and formatting
crossterm = "0.27"

# Home directory for storage
dirs = "5"
